@@ -1,28 +1,27 @@
 /* input.c
 
-   GNU Chess frontend
+   Chess Opponent frontend
 
+   Copyright (C) 2020 David Yockey
    Copyright (C) 2001-2020 Free Software Foundation, Inc.
 
-   GNU Chess is free software; you can redistribute it and/or modify
+   Chess Opponent is based on GNU Chess.
+
+   This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation; either version 3, or (at your option)
    any later version.
 
-   GNU Chess is distributed in the hope that it will be useful,
+   This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
 
    You should have received a copy of the GNU General Public License
-   along with GNU Chess; see the file COPYING.  If not, write to
-   the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
-   Boston, MA 02111-1307, USA.
+   along with this program. If not, see <http://www.gnu.org/licenses/>.
 
-   Contact Info: 
-     bug-gnu-chess@gnu.org
-     cracraft@ai.mit.edu, cracraft@stanfordalumni.org, cracraft@earthlink.net
-     lukas@debian.org
+   Contact Info:
+     https://github.com/dfyockey/chessopp/issues
 */
 
 /*
@@ -147,11 +146,24 @@ void *input_func(void *arg __attribute__((unused)) )
         pthread_cond_wait( &input_cond, &input_mutex );
       pthread_mutex_unlock( &input_mutex );
 
-      sprintf(prompt,"%s (%d) : ", 
+      if (ChooseSide) {
+        sprintf(prompt, "Play black (b) or white (w)? ");
+      } else {
+        sprintf(prompt,"%s (%d) : ",
 	      RealSide ? _("Black") : _("White"), 
 	      (RealGameCnt+1)/2 + 1 );
+      }
     }
     get_line(prompt);
+
+    // If at first they do not choose, try, try again. :)
+    if (ChooseSide){
+	if ( strcmp(userinputstr,"b\n") != 0 && strcmp(userinputstr,"w\n") != 0 )
+            continue;
+        else
+            ChooseSide = 0;
+    }
+
     SendToFrontend( userinputstr );
 #ifdef HAVE_LIBREADLINE
     SendToFrontend( "\n" );
